<resources>
    <string name="app_name">ColorRoulette</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="color_picker_fragment_label">Color picker Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start_color">Colormode</string>
    <string name="start_dark">Darkmode</string>
    <string name="plus">\+</string>
    <string name="startScore">0</string>

    <string name="hello_first_fragment">Hello first fragment V2</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pick_color">Pick Color</string>
    <string name="geeksforgeeks">GeeksforGeeks</string>
    <string name="your_picked_color_is">Your picked color is:</string>
    <string name="set_color">Set Color!!!!!</string>
</resources>